# System-call-tracer

./: CMakeLists.txt  README.md  tracer
comparison_syscalls_2025_10_09T13_22_46_vs_syscalls_2025_10_09T12_48_37/: regression_report.txt
data/: syscall_1.csv  syscalls.csv  syscalls_2025_09_12T08_52_25.csv  syscalls_2025_09_12T10_06_37.csv  syscalls_2025_09_12T10_12_24.csv  syscalls_2025_09_13T08_34_44.csv  syscalls_2025_10_09T12_48_37.csv  syscalls_2025_10_09T13_22_46.csv  syscalls_2025_10_09T13_28_28.csv  syscalls_2025_10_09T14_23_47.csv  syscalls_2025_10_09T14_27_08.csv  syscalls_2025_10_09T14_40_40.csv
data/syscalls_2025_10_09T12_48_37_threshold_analysis/: alert_report.txt
data/syscalls_2025_10_09T13_28_28_threshold_analysis/: alert_report.txt
data/syscalls_2025_10_09T14_27_08_threshold_analysis/: alert_report.txt
data/syscalls_2025_10_09T14_40_40_threshold_analysis/: alert_report.txt
data/syscalls_threshold_analysis/: alert_report.txt
scripts/: plot_stats.py
src/: a.out  syscall_names.h  tracer.cpp
test/: a.out  lock  lock.cpp  lock2  lock_improved.cpp  sort  sort.c
